rtest/tests/jsr335/Semantics/InterfaceMethods/MethodDeclarations/ShouldFail/syntax16/Test.java
// .result=COMPILE_FAIL


public class Test {
	interface A {
		void m(int i);
	}
	interface B {
		default void m(int i) { }
	}
	interface C extends A, B { }
}